--- a/Water Use Assumptions_v3.qmd
+++ b/Water Use Assumptions_v3.qmd
@@ -5,6 +5,8 @@ format:
   docx:
     mainfont: Arial # Sets the main font to Arial for Word output
     reference-doc: custom-reference-doc.docx # Use template
+filters:
+  - pandoc-word-styles.lua
 ---
 
 ```{r setup, include=FALSE}
@@ -26,7 +28,7 @@ file_path2 <- "data/APR25-Max.xlsx"
 
 # Update sheet name and data range for the Water Use Assumption SCT export
 sheet_name4 <- "Sheet1"
-data_range4 <- "A1:E49"
+data_range4 <- "A1:E55"
 ##############################################
 
 ## There sheet names and data ranges (for Projected State Use) should not be changed.
@@ -113,43 +115,6 @@ mwdICSY3 = ifelse(find_rows_containing_string(sct_data,"MWD_Default")[1,4],
                       round(find_rows_containing_string(sct_data,"MWD_Default")[1,4]/1000,1)),
                paste0("delivery of ", 
                       round(find_rows_containing_string(sct_data,"MWD_Default")[2,4]/1000,1)))
-
-###### Check for AZ Reductions ######################
-
-# x <- find_rows_containing_string(sct_data, "CAP Annual Shortage Volume")[2] 
-# y <- find_rows_containing_string(sct_data, "AnnualDCPContribution_AZ")[2]
-# z <- find_rows_containing_string(sct_data, "AnnualDeliveryEC_AZ")[2]
-# condition1_met <- x > 0; 
-# condition2_met <- y > 0; 
-# condition3_met <- z > 0
-# 
-# if(x >0 | y>0 | z>0){
-#   addreductions = TRUE
-# } else {
-#   addreductions = FALSE
-# }
-# 
-# # --- Define the phrases for each condition ---
-# phrase1_text <- paste0("Shortage volume of ", round(x/1000,0), " kaf")
-# phrase2_text <- paste0("DCP contribution of ", round(y/1000,0), " kaf")
-# phrase3_text <- paste0("ICS delivery of ", round(z/1000,0), " kaf")
-# 
-# active_phrases <- character(0)
-# if (condition1_met) { active_phrases <- c(active_phrases, phrase1_text) }
-# if (condition2_met) { active_phrases <- c(active_phrases, phrase2_text) }
-# if (condition3_met) { active_phrases <- c(active_phrases, phrase3_text) }
-# num_active_conditions <- length(active_phrases)
-# reductions_scen_all <- ""
-# if (num_active_conditions == 1) { reductions_scen_all <- active_phrases[1]
-# } else if (num_active_conditions == 2) { reductions_scen_all <- paste0(active_phrases[1], ", and ", active_phrases[2])
-# } else if (num_active_conditions == 3) { reductions_scen_all <- paste0(active_phrases[1], ", ", active_phrases[2], ", and ", active_phrases[3])}
-
-
-#####################################################
-
-
-
-
 
 cons_CA <- tryCatch({
   readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeCA)
@@ -280,7 +245,7 @@ if (exists("show_2025_detailed_note") && show_2025_detailed_note) {
 
 #### U.S. Contractors: `r sprintf("%.3f",round(sum(apportionment[,2])/1000000,3))` maf
 
-##### California: `r sprintf("%.3f",round(sum(apportionment[1,2])/1000000,3))` maf
+##### California: [`r sprintf("%.3f",round(sum(apportionment[1,2])/1000000,3))` maf]{style="color: #0070C0;"}
 * MWD annual diversion of `r round(as.numeric(find_rows_containing_string(sct_data,"MWDDiversionAnnualFC")[2])/1000,0)` kaf
     * Projected diversion includes the `r mwdICSY1` kaf of ICS
 
@@ -325,7 +290,7 @@ if (exists("addBICS") && addBICS) {
 
 ```
 
-##### Arizona: `r sprintf("%.3f",round(sum(apportionment[2,2])/1000000,3))` maf
+##### Arizona: [`r sprintf("%.3f",round(sum(apportionment[2,2])/1000000,3))` maf]{style="color: #0070C0;"}
 * CAP annual diversion of `r round(find_rows_containing_string(sct_data, "CAPAnnualFC")[1,2]/1000,0)` kaf
 
 ```{r conditional-AZ-reductions-Y1, results='asis', echo=FALSE}
@@ -357,7 +322,7 @@ if (nrow(cons_NonCAWCD_CY) > 0 && ncol(cons_NonCAWCD_CY) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_NonCAWCD_CY, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -380,7 +345,7 @@ if (nrow(cons_CAWCD_CY) > 0 && ncol(cons_CAWCD_CY) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_CAWCD_CY, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -428,8 +393,8 @@ if (exists("addBICS") && addBICS) {
 
 ```
 
-##### Nevada: `r sprintf("%.3f",round(sum(apportionment[3,2])/1000000,3))` maf
-* SNWA annual use of `r round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,2]/1000,0)` kaf. Projected diversion includes:
+##### Nevada: [`r sprintf("%.3f",round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,2]/1000000,3))` maf]{style="color: #0070C0;"}
+* SNWA annual use of `r round(find_rows_containing_string(sct_data, "SNWPAnnualFC")[1,2]/1000,0)` kaf. Projected diversion includes:
 
 ```{r conditional-NV-Shortage, results='asis', echo=FALSE}
 # This R code chunk will print Markdown text if the condition is met.
@@ -546,6 +511,51 @@ if (exists("addBICS") && addBICS) {
   cat(" kaf by SNWA\n")
 }
 
+if(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,2]>0){
+  addVacDCPtoSys = TRUE
+  nvVacDCPtoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,2]/1000,1)))
+} else{
+  addVacDCPtoSys = FALSE
+  nvVacDCPtoSys=""
+}
+
+if(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,2]>0){
+  addVacECICStoSys = TRUE
+  nvVacECICStoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,2]/1000,1)))
+} else{
+  addVacECICStoSys = FALSE
+  nvVacECICStoSys=""
+}
+
+if (addVacDCPtoSys && addVacECICStoSys) {
+  # Both are TRUE: assign the sum
+  totaltosys <- nvVacDCPtoSys + nvVacECICStoSys
+} else if (addVacDCPtoSys) {
+  # Only addVacDCPtoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacDCPtoSys
+} else if (addVacECICStoSys) {
+  # Only addVacECICStoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacECICStoSys # Using the assumed numeric variable name
+}
+
+if (addVacDCPtoSys || addVacECICStoSys) {
+  cat("* Vacated ICS space (to system water) of ") 
+  cat(totaltosys)
+  cat(" kaf\n")
+}
+
+if (addVacDCPtoSys){
+  cat("  * DCP ICS of ")
+  cat(nvVacDCPtoSys)
+  cat(" kaf converted to system water\n")
+}
+
+if (addVacECICStoSys){
+  cat("  * EC ICS of ")
+  cat(nvVacECICStoSys)
+  cat(" kaf converted to system water\n")
+}
+
 ```
 
 #### Mexico’s Scheduled Water Delivery: `r sprintf("%.3f", round(as.numeric(find_rows_containing_string(Max1, "Mexico Use")$value)/1000000,3))` maf
@@ -649,7 +659,7 @@ Total projected water use **(`r sprintf("%.3f",round(as.numeric(find_rows_contai
 
 #### U.S. Contractors: `r sprintf("%.3f",round(sum(apportionment[,3])/1000000,3))` maf
 
-##### California: `r sprintf("%.3f",round(sum(apportionment[1,3])/1000000,3))` maf
+##### California: [`r sprintf("%.3f",round(sum(apportionment[1,3])/1000000,3))` maf]{style="color: #0070C0;"}
 * MWD annual diversion of `r round(as.numeric(find_rows_containing_string(sct_data,"MWDDiversionAnnualFC")[3])/1000,0)` kaf
     * Projected diversion includes the `r mwdICSY2` kaf of ICS
 ```{r generate-bullet-list-apply-2, results='asis'}
@@ -696,7 +706,7 @@ if (exists("addBICS") && addBICS) {
 
 ```
 
-##### Arizona: `r sprintf("%.3f",round(sum(apportionment[2,3])/1000000,3))` maf
+##### Arizona: [`r sprintf("%.3f",round(sum(apportionment[2,3])/1000000,3))` maf]{style="color: #0070C0;"}
 * CAP annual diversion of `r round(find_rows_containing_string(sct_data, "CAPAnnualFC")[1,3]/1000,0)` kaf
 
 ```{r conditional-AZ-reductions-Y2, results='asis', echo=FALSE}
@@ -728,7 +738,7 @@ if (nrow(cons_NonCAWCD_CY2) > 0 && ncol(cons_NonCAWCD_CY2) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_NonCAWCD_CY2, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -748,7 +758,7 @@ if (nrow(cons_CAWCD_CY2) > 0 && ncol(cons_CAWCD_CY2) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_CAWCD_CY2, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -791,9 +801,9 @@ if (exists("addBICS") && addBICS) {
 
 ```
 
-##### Nevada: `r sprintf("%.3f",round(sum(apportionment[3,3])/1000000,3))` maf
+##### Nevada: [`r sprintf("%.3f",round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,3]/1000000,3))` maf]{style="color: #0070C0;"}
 
-* SNWA annual use of `r round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,3]/1000,0)` kaf. Projected diversion includes:
+* SNWA annual use of `r round(find_rows_containing_string(sct_data, "SNWPAnnualFC")[1,3]/1000,0)` kaf. Projected diversion includes:
 
 ```{r conditional-NV-Shortage-Y2, results='asis', echo=FALSE}
 # This R code chunk will print Markdown text if the condition is met.
@@ -910,6 +920,51 @@ if (exists("addBICS") && addBICS) {
   cat(" kaf by SNWA\n")
 }
 
+if(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,3]>0){
+  addVacDCPtoSys = TRUE
+  nvVacDCPtoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,3]/1000,1)))
+} else{
+  addVacDCPtoSys = FALSE
+  nvVacDCPtoSys=""
+}
+
+if(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,3]>0){
+  addVacECICStoSys = TRUE
+  nvVacECICStoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,3]/1000,1)))
+} else{
+  addVacECICStoSys = FALSE
+  nvVacECICStoSys=""
+}
+
+if (addVacDCPtoSys && addVacECICStoSys) {
+  # Both are TRUE: assign the sum
+  totaltosys <- nvVacDCPtoSys + nvVacECICStoSys
+} else if (addVacDCPtoSys) {
+  # Only addVacDCPtoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacDCPtoSys
+} else if (addVacECICStoSys) {
+  # Only addVacECICStoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacECICStoSys # Using the assumed numeric variable name
+}
+
+if (addVacDCPtoSys || addVacECICStoSys) {
+  cat("* Vacated ICS space (to system water) of ") 
+  cat(totaltosys)
+  cat(" kaf\n")
+}
+
+if (addVacDCPtoSys){
+  cat("  * DCP ICS of ")
+  cat(nvVacDCPtoSys)
+  cat(" kaf converted to system water\n")
+}
+
+if (addVacECICStoSys){
+  cat("  * EC ICS of ")
+  cat(nvVacECICStoSys)
+  cat(" kaf converted to system water\n")
+}
+
 ```
 
 
@@ -1014,7 +1069,7 @@ Total projected water use **(`r sprintf("%.3f",round(as.numeric(find_rows_contai
 
 #### U.S. Contractors: `r sprintf("%.3f",round(sum(apportionment[,4])/1000000,3))` maf
 
-##### California: `r sprintf("%.3f",round(sum(apportionment[1,4])/1000000,3))` maf
+##### California: [`r sprintf("%.3f",round(sum(apportionment[1,4])/1000000,3))` maf]{style="color: #0070C0;"}
 * MWD annual diversion of `r round(as.numeric(find_rows_containing_string(sct_data,"MWDDiversionAnnualFC")[4])/1000,0)` kaf
     * Projected diversion includes the `r mwdICSY3` kaf of ICS
     
@@ -1063,7 +1118,7 @@ if (exists("addBICS") && addBICS) {
 
 ```
 
-##### Arizona: `r sprintf("%.3f",round(sum(apportionment[2,4])/1000000,3))` maf
+##### Arizona: [`r sprintf("%.3f",round(sum(apportionment[2,4])/1000000,3))` maf]{style="color: #0070C0;"}
 * CAP annual diversion of `r prettyNum(round(find_rows_containing_string(sct_data, "CAPAnnualFC")[1,4]/1000,0),  big.mark = ",", scientific = FALSE)` kaf
 ```{r conditional-AZ-reductions-Y3, results='asis', echo=FALSE}
 
@@ -1094,7 +1149,7 @@ if (nrow(cons_NonCAWCD_CY3) > 0 && ncol(cons_NonCAWCD_CY3) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_NonCAWCD_CY3, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -1114,7 +1169,7 @@ if (nrow(cons_CAWCD_CY3) > 0 && ncol(cons_CAWCD_CY3) >= 2) {
   # row[1] will be the value from the first column of cons_CA_CY
   # row[2] will be the value from the second column of cons_CA_CY
   bullet_points <- apply(cons_CAWCD_CY3, 1, function(row) {
-    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(as.numeric(row[2])/1000,1) , " kaf\n"), paste0(round(as.numeric(row[2]),0), " af\n") ))
+    paste0("  * ", row[1], " : ", ifelse(as.numeric(row[2])>100, paste0(round(((as.numeric(row[2])/1000)*100+.1),-1)/100 , " kaf\n"), paste0(round((as.numeric(row[2])*10+.1),-1)/10, " af\n") ))
   })
   
   # Print each bullet point, separated by a newline
@@ -1158,9 +1213,9 @@ if (exists("addBICS") && addBICS) {
 ```
 
 
-##### Nevada: `r sprintf("%.3f",round(sum(apportionment[3,4])/1000000,3))` maf
+##### Nevada: [`r sprintf("%.3f",round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,4]/1000000,3))` maf]{style="color: #0070C0;"}
 
-* SNWA annual use of `r round(find_rows_containing_string(sct_data, "NvTotalAnnual")[1,4]/1000,0)` kaf. Projected diversion includes:
+* SNWA annual use of `r round(find_rows_containing_string(sct_data, "SNWPAnnualFC")[1,4]/1000,0)` kaf. Projected diversion includes:
 
 ```{r conditional-NV-Shortage-Y3, results='asis', echo=FALSE}
 
@@ -1170,6 +1225,14 @@ if(find_rows_containing_string(sct_data, "SNWP Annual Shortage Volume")[1,4]>0){
 } else{
   addNVShortage = FALSE
   nvshort=""
+}
+
+if(find_rows_containing_string(sct_data, "AnnualCreationEC_NV")[1,4]>0){
+  addECICScreate = TRUE
+  nvECICSCreate = unlist(unname(round(find_rows_containing_string(sct_data, "AnnualCreationEC_NV")[1,4]/1000,1)))
+} else{
+  addECICScreate = FALSE
+  nvECICSCreate=""
 }
 
 if(find_rows_containing_string(sct_data, "VacatedECICSToBeDelivered_SNWA")[1,4]>0){
@@ -1187,12 +1250,20 @@ if (exists("addNVShortage") && addNVShortage) {
   cat(" kaf\n")
 }
 
+if (exists("addECICScreate") && addECICScreate) {
+  #cat("\n") # Ensures a new line before the conditional text
+  cat("  * EC ICS creation of ")
+  cat(nvECICSCreate)
+  cat(" kaf\n")
+}
+
 if (exists("addECICSdel") && addECICSdel) {
   #cat("\n") # Ensures a new line before the conditional text
   cat("  * Delivery of ")
   cat(nvECICSdel)
   cat(" kaf of EC ICS due to full ICS bank\n")
 }
+
 
 ```
 
@@ -1259,7 +1330,6 @@ if(addNVTotSyscon && addTribSyscon) {
   }
 }
 
-
 ```
 
 ```{r conditional-NV-BICS-Y3, results='asis', echo=FALSE}
@@ -1269,6 +1339,51 @@ if (exists("addBICS") && addBICS) {
   cat("* Binational ICS creation of ")
   cat(bics)
   cat(" kaf by SNWA\n")
+}
+
+if(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,4]>0){
+  addVacDCPtoSys = TRUE
+  nvVacDCPtoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedDCPICSToSysWater_SNWA")[1,4]/1000,1)))
+} else{
+  addVacDCPtoSys = FALSE
+  nvVacDCPtoSys=""
+}
+
+if(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,4]>0){
+  addVacECICStoSys = TRUE
+  nvVacECICStoSys = unlist(unname(round(find_rows_containing_string(sct_data, "VacatedECICSToSysWater_SNWA")[1,4]/1000,1)))
+} else{
+  addVacECICStoSys = FALSE
+  nvVacECICStoSys=""
+}
+
+if (addVacDCPtoSys && addVacECICStoSys) {
+  # Both are TRUE: assign the sum
+  totaltosys <- nvVacDCPtoSys + nvVacECICStoSys
+} else if (addVacDCPtoSys) {
+  # Only addVacDCPtoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacDCPtoSys
+} else if (addVacECICStoSys) {
+  # Only addVacECICStoSys is TRUE: assign its corresponding numeric value
+  totaltosys <- nvVacECICStoSys # Using the assumed numeric variable name
+}
+
+if (addVacDCPtoSys || addVacECICStoSys) {
+  cat("* Vacated ICS space (to system water) of ") 
+  cat(totaltosys)
+  cat(" kaf\n")
+}
+
+if (addVacDCPtoSys){
+  cat("  * DCP ICS of ")
+  cat(nvVacDCPtoSys)
+  cat(" kaf converted to system water\n")
+}
+
+if (addVacECICStoSys){
+  cat("  * EC ICS of ")
+  cat(nvVacECICStoSys)
+  cat(" kaf converted to system water\n")
 }
 
 ```
